增加旧系统数据库上下文 成功导入专业技术职务信息

--- a/src/PCME.Api/PCME.Api.csproj
+++ b/src/PCME.Api/PCME.Api.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PCME.MOPDB\PCME.MOPDB.csproj" />
     <ProjectReference Include="..\PCME.Infrastructure\PCME.Infrastructure.csproj" />
     <ProjectReference Include="..\PCME.WebHost\PCME.CustomWebHost.csproj" />
   </ItemGroup>
