优化人员导入过程；增加多核和分批次导入功能

--- a/src/PCME.Infrastructure/PCME.Infrastructure.csproj
+++ b/src/PCME.Infrastructure/PCME.Infrastructure.csproj
@@ -38,6 +38,7 @@
     <Compile Remove="Migrations\20180506072358_init.cs" />
     <Compile Remove="Migrations\20180506073702_init.cs" />
     <Compile Remove="Migrations\20180506085527_init.cs" />
+    <Compile Remove="Migrations\20180506122627_init.cs" />
   </ItemGroup>
 
   <ItemGroup>
