增加模型自定义验证 增加人员状态类型字段

--- a/src/PCME.Infrastructure/PCME.Infrastructure.csproj
+++ b/src/PCME.Infrastructure/PCME.Infrastructure.csproj
@@ -39,6 +39,7 @@
     <Compile Remove="Migrations\20180506073702_init.cs" />
     <Compile Remove="Migrations\20180506085527_init.cs" />
     <Compile Remove="Migrations\20180506122627_init.cs" />
+    <Compile Remove="Migrations\20180507035858_init.cs" />
   </ItemGroup>
 
   <ItemGroup>
