完成培训点增删改；项目迁移到MAC

--- a/src/PCME.Api/appsettings.json
+++ b/src/PCME.Api/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConnectionString": "Server=.;Initial Catalog=PCME;Integrated Security=true",
+  "ConnectionString": "Server=.;database=PCME;uid=sa;pwd=Abc@28122661",
   "UseCustomizationData": true,
   "Logging": {
     "IncludeScopes": false,
