--- a/src/PCME.Domain/PCME.Domain.csproj
+++ b/src/PCME.Domain/PCME.Domain.csproj
@@ -15,4 +15,7 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AggregatesModel\AuditStatusAggregates\" />
+  </ItemGroup>
 </Project>
