修正AuditStatus静态主键重复导致EF错误

--- a/src/PCME.Infrastructure/PCME.Infrastructure.csproj
+++ b/src/PCME.Infrastructure/PCME.Infrastructure.csproj
@@ -9,7 +9,11 @@
     <Compile Remove="Repository\**" />
     <EmbeddedResource Remove="Repository\**" />
     <None Remove="Repository\**" />
-    <Compile Remove="Migrations\20180508042142_init.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\20180512133548_init.cs" />
+    <Compile Remove="Migrations\20180512134634_init.cs" />
   </ItemGroup>
 
   <ItemGroup>
