--- a/src/PCME.Domain/PCME.Domain.csproj
+++ b/src/PCME.Domain/PCME.Domain.csproj
@@ -14,4 +14,8 @@
       <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.stores\2.0.2\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="AggregatesModel\AuditStatusAggregates\" />
+  </ItemGroup>
 </Project>
