--- a/src/PCME.Domain/PCME.Domain.csproj
+++ b/src/PCME.Domain/PCME.Domain.csproj
@@ -18,4 +18,8 @@
   <ItemGroup>
     <Folder Include="AggregatesModel\AuditStatusAggregates\" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="AggregatesModel\TrainingCenterAggregates\TrainingCenterType.cs" />
+    <Compile Remove="AggregatesModel\StudentAggregates\IStudentRepository.cs" />
+  </ItemGroup>
 </Project>
