--- a/src/PCME.Infrastructure/PCME.Infrastructure.csproj
+++ b/src/PCME.Infrastructure/PCME.Infrastructure.csproj
@@ -27,6 +27,7 @@
     <Compile Remove="Migrations\20180519142944_signupcollection_signuphaskeys.cs" />
     <Compile Remove="Migrations\20180520133217_init.cs" />
     <Compile Remove="Migrations\20180520133559_init.cs" />
+    <Compile Remove="Migrations\20180520134334_init.cs" />
   </ItemGroup>
 
   <ItemGroup>
