增加教室管理和培训点删除检测功能

--- a/src/PCME.Api/PCME.Api.csproj
+++ b/src/PCME.Api/PCME.Api.csproj
@@ -2,10 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <UserSecretsId>018d00c5-2e6b-43fa-967e-5f25706561e0</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Remove="Properties\PublishProfiles\FolderProfile.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Application\DomainEventHandlers\" />
+    <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="Setup\" />
     <Folder Include="StaticFile\Export\SignUp\" />
     <Folder Include="wwwroot\" />
@@ -27,6 +34,7 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
