增加人员头像上传功能

--- a/src/PCME.Api/PCME.Api.csproj
+++ b/src/PCME.Api/PCME.Api.csproj
@@ -15,7 +15,7 @@
     <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="Setup\" />
     <Folder Include="StaticFile\Export\SignUp\" />
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Files\" />
   </ItemGroup>
 
   <ItemGroup>
