--- a/src/PCME.Infrastructure/PCME.Infrastructure.csproj
+++ b/src/PCME.Infrastructure/PCME.Infrastructure.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PCME.MOPDB\PCME.MOPDB.csproj" />
     <ProjectReference Include="..\PCME.Domain\PCME.Domain.csproj" />
   </ItemGroup>
 
