--- a/src/PCME.Infrastructure/PCME.Infrastructure.csproj
+++ b/src/PCME.Infrastructure/PCME.Infrastructure.csproj
@@ -34,6 +34,7 @@
     <Compile Remove="Migrations\20180707025341_change_examsubjectopeninfo_SignUpFinishOffset.cs" />
     <Compile Remove="Migrations\20180707030745_drop_examsubjectopeninfo.cs" />
     <Compile Remove="Migrations\20180707031024_create_examsubjectopeninfo.cs" />
+    <Compile Remove="Migrations\20180709082323_remove_workunit_student_ondelete.cs" />
   </ItemGroup>
 
   <ItemGroup>
