--- a/src/PCME.Api/appsettings.json
+++ b/src/PCME.Api/appsettings.json
@@ -1,23 +1,23 @@
 ﻿{
-  "ConnectionString": "Server=.;database=PCME;uid=sa;pwd=Abc@28122661",
-  "ConnectionString_Video": "Server=.;database=PCME_Video;uid=sa;pwd=Abc@28122661",
-  "ConnectionString_Test": "Server=.;database=PCME_TEST;uid=sa;pwd=Abc@28122661",
-  "ConnectionString_KSDB": "Server=.;database=KSDB;uid=sa;pwd=Abc@28122661",
-  //"ConnectionString": "Server=10.128.200.166;database=PCME;uid=PCMEMaster;pwd=abc28122661",
-  //"ConnectionString_Video": "Server=10.128.200.165;database=PCME_Video;uid=sa;pwd=abc28122661",
-  //"ConnectionString_Test": "Server=10.128.200.165;database=PCME_TEST;uid=sa;pwd=abc28122661",
-  //"ConnectionString_KSDB": "Server=10.128.200.165;database=KSDB;uid=sa;pwd=abc28122661",
+  //"ConnectionString": "Server=.;database=PCME;uid=sa;pwd=sa@28122661",
+  //"ConnectionString_Video": "Server=.;database=PCME_Video;uid=sa;pwd=sa@28122661",
+  //"ConnectionString_Test": "Server=.;database=PCME_TEST;uid=sa;pwd=sa@28122661",
+  //"ConnectionString_KSDB": "Server=.;database=KSDB;uid=sa;pwd=sa@28122661",
+  "ConnectionString": "Server=10.128.200.166;database=PCME;uid=PCMEMaster;pwd=abc28122661",
+  "ConnectionString_Video": "Server=10.128.200.165;database=PCME_Video;uid=sa;pwd=abc28122661",
+  "ConnectionString_Test": "Server=10.128.200.165;database=PCME_TEST;uid=sa;pwd=abc28122661",
+  "ConnectionString_KSDB": "Server=10.128.200.165;database=KSDB;uid=sa;pwd=abc28122661",
   "UseCustomizationData": true,
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "None"
       }
     },
     "Console": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "None"
       }
     }
   }
