--- a/src/PCME.Api/PCME.Api.csproj
+++ b/src/PCME.Api/PCME.Api.csproj
@@ -25,7 +25,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.0.100" />
     <PackageReference Include="identityserver4.accesstokenvalidation" Version="2.6.0" />
     <PackageReference Include="MediatR" Version="4.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="QRCoder" Version="1.3.3" />
   </ItemGroup>
 
