--- a/src/PCME.Authorization/PCME.Authorization.csproj
+++ b/src/PCME.Authorization/PCME.Authorization.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 
