--- a/src/PCME.Exam.Api/PCME.Exam.Api.csproj
+++ b/src/PCME.Exam.Api/PCME.Exam.Api.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="identityserver4.accesstokenvalidation" Version="2.6.0" />
   </ItemGroup>
 
