--- a/src/PCME.WebHost/PCME.CustomWebHost.csproj
+++ b/src/PCME.WebHost/PCME.CustomWebHost.csproj
@@ -8,7 +8,7 @@
     <DebugSymbols></DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Polly" Version="6.1.0" />
   </ItemGroup>
 
