初步完成申请表人员列表的读取

--- a/src/PCME.Api/appsettings.json
+++ b/src/PCME.Api/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
-  //"ConnectionString": "Server=.;database=PCME;uid=sa;pwd=sa@28122661",
-  //"ConnectionString_Video": "Server=.;database=PCME_Video;uid=sa;pwd=sa@28122661",
-  //"ConnectionString_Test": "Server=.;database=PCME_TEST;uid=sa;pwd=sa@28122661",
-  //"ConnectionString_KSDB": "Server=.;database=KSDB;uid=sa;pwd=sa@28122661",
+  "ConnectionString": "Server=.;database=PCME;uid=sa;pwd=pwd@1234",
+  "ConnectionString_Video": "Server=.;database=PCME_Video;uid=sa;pwd=pwd@1234",
+  "ConnectionString_Test": "Server=.;database=PCME_TEST;uid=sa;pwd=pwd@1234",
+  "ConnectionString_KSDB": "Server=.;database=KSDB;uid=sa;pwd=pwd@1234",
   //"ConnectionString": "Server=10.128.200.166;database=PCME;uid=PCMEMaster;pwd=abc28122661",
   //"ConnectionString_Video": "Server=10.128.200.165;database=PCME_Video;uid=sa;pwd=abc28122661",
   //"ConnectionString_Test": "Server=10.128.200.165;database=PCME_TEST;uid=sa;pwd=abc28122661",
